--- a/.ideavimrc
+++ b/.ideavimrc
@@ -1,6 +1,9 @@
+"" Source your .vimrc
 "source ~/.vimrc
 Plug 'tpope/vim-commentary'
 Plug 'tpope/vim-surround'
+
+
 "" -- Suggested options --
 " Show a few lines of context around the cursor. Note that this makes the
 " text scroll if you mouse-click near the start or end of the window.
@@ -10,7 +13,7 @@ set scrolloff=5
 set incsearch
 
 " Don't use Ex mode, use Q for formatting.
-map Q gq
+map Q :q<CR>
 
 
 "" -- Map IDE actions to IdeaVim -- https://jb.gg/abva4t
@@ -36,3 +39,4 @@ set clipboard+=unnamed
 map J 0
 map K $
 set relativenumber
+map m ysiw
